<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Theme Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_theme"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_dark" />

        <!-- Language Selection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_dark" />

        <!-- Retrieve Credentials -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve_credentials"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            app:boxBackgroundMode="outline"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_secondary"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFetchCredentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_credentials"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            app:backgroundTint="@android:color/holo_blue_dark" />


        <TextView
            android:id="@+id/tvCurrentUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/tvCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="6dp"/>


        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <!-- Update Username -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_username"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            app:boxBackgroundMode="outline"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_secondary"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_username"
            app:boxBackgroundMode="outline"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_secondary"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_username"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            app:backgroundTint="@android:color/holo_blue_dark" />

        <!-- Clear Data -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_app_data"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            app:backgroundTint="@android:color/holo_blue_dark" />

        <!-- Privacy Policy -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_privacy_policy"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"
            app:backgroundTint="@android:color/holo_blue_dark" />

    </LinearLayout>

</ScrollView>
