<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/darker_gray">

    <!-- Instruction Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_enter_registered_email"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/auth_enter_registered_email"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/editbox_background_normal"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:elevation="2dp"
        android:layout_marginBottom="12dp"/>

    <!-- Retrieve Button -->
    <Button
        android:id="@+id/retrieve_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/auth_retrieve_account"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"/>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"/>

    <!-- Display Username -->
    <TextView
        android:id="@+id/display_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_username"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

    <!-- Display Password -->
    <TextView
        android:id="@+id/display_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>
</LinearLayout>
